--- a/point_lio/config/mid360.yaml
+++ b/point_lio/config/mid360.yaml
@@ -1,6 +1,6 @@
 /**:
     ros__parameters:
-        use_imu_as_input: False                             # Change to True to use IMU as input of Point-LIO
+        use_imu_as_input: False     # False: use imu as output, True: use imu as input                        # Change to True to use IMU as input of Point-LIO
         prop_at_freq_of_imu: True
         check_satu: True
         init_map_size: 10
@@ -32,7 +32,8 @@
             blind: 0.5
 
         mapping:
-            imu_en: True
+            imu_en: True # if True,just wait for 10s then we can get the initial gravity
+            # it will not use the gravity below, if imu_en is True
             extrinsic_est_en: False                         # for aggressive motion, set this variable False
             imu_time_inte: 0.005                            # = 1 / frequency of IMU
             lidar_time_inte: 0.1
